# Meeps

./: .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  index.html  overlay.html  package-lock.json  package.json  railway.json  tailwind.config.cjs  test-ws.js  vite.config.js
.github/: CODEOWNERS
.github/workflows/: build-windows.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  railway.json
backend/migrations/: 001_create_users.sql  002_create_messages.sql  003_users_profile_columns.sql  004_create_board_issues.sql  005_message_indexes_and_created_at.sql  006_fix_messages_created_at_type.sql  006_uploads_and_message_attachments.sql  007_push_subscriptions.sql  008_valorant_discord.sql  009_valorant_links_app.sql  010_valorant_region_default_eu.sql  011_uploads_public_id.sql  012_user_status.sql  012_user_type_and_diana_bot.sql  013_messages_embed.sql  014_activity_logging_enabled.sql  015_league_username.sql  016_activity_detail_level.sql  016_github_project_board.sql  017_message_replies_and_reactions.sql  017_uploads_pinned.sql  018_win_lose_gif.sql
backend/scripts/: generate-vapid-keys.js  init-db.js  run-migrations.js
backend/src/: app.js  server.js
public/: riot.txt
scripts/: generate-icon.js  generate-icon.py  generate-latest-json.js  generate-pwa-icons.js  update-icons.js  write-env-config.js
src/: App.js  App.jsx  index.css  main.jsx  overlay.jsx  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+65 files in other folders)
