[package]
name = "meeps"
version = "0.1.0"
description = "Meeps Desktop Chat"
authors = ["Meeps Team"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "shell-open", "notification-all", "window-all", "system-tray"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

